--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
+server.servlet.session.timeout=30m
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
